--- a/demo3.html
+++ b/demo3.html
@@ -3,11 +3,11 @@
 <body>
 
 <h2 style="background-color:red">
-Anish
+Anish U
 </h2>
 
 <h2 style="background-color:orange">
-Wipro Technology
+Wipro Technology Banglore
 </h2>
 
 <h2 style="background-color:yellow">
@@ -15,7 +15,7 @@ Digital Academy Project
 </h2>
 
 <h2 style="background-color:blue;color:white">
-Banglore
+StackRoute
 </h2>
 
 <h2 style="background-color:cyan">
